
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct in_addr {int dummy; } ;
struct hostent {scalar_t__ h_addr_list; } ;


 struct hostent* gethostbyname (char*) ;
 char* inet_ntoa (struct in_addr) ;

char *getHost (char *host)
{
    struct hostent *hp;
    struct in_addr **y;

    hp = gethostbyname(host);
    y = (struct in_addr **)hp->h_addr_list;

    return inet_ntoa(**y);
}
