; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/php/webapps/extr_8559.c_getHost.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/php/webapps/extr_8559.c_getHost.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostent = type { i64 }
%struct.in_addr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @getHost(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.hostent*, align 8
  %4 = alloca %struct.in_addr**, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call %struct.hostent* @gethostbyname(i8* %5)
  store %struct.hostent* %6, %struct.hostent** %3, align 8
  %7 = load %struct.hostent*, %struct.hostent** %3, align 8
  %8 = getelementptr inbounds %struct.hostent, %struct.hostent* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = inttoptr i64 %9 to %struct.in_addr**
  store %struct.in_addr** %10, %struct.in_addr*** %4, align 8
  %11 = load %struct.in_addr**, %struct.in_addr*** %4, align 8
  %12 = load %struct.in_addr*, %struct.in_addr** %11, align 8
  %13 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i8* @inet_ntoa(i32 %14)
  ret i8* %15
}

declare dso_local %struct.hostent* @gethostbyname(i8*) #1

declare dso_local i8* @inet_ntoa(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
